--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -2,5 +2,6 @@
   "Hilfe": "Help",
   "Impressum": "Impressum",
   "Einstellungen": "Settings",
-  "Über uns": "About us"
+  "Über uns": "About us",
+  "Start": "Start"
 }
