--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -2,5 +2,6 @@
   "Hilfe": "Aide",
   "Impressum": "Impressum",
   "Einstellungen": "Paramètres",
-  "Über uns": "À propos de nous"
+  "Über uns": "À propos de nous",
+  "Start": "Start (fr)"
 }
