--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -3,5 +3,7 @@
   "Impressum": "Impressum",
   "Einstellungen": "Settings",
   "Über uns": "About us",
-  "Start": "Start"
+  "Start": "Start",
+  "Kaiser, Kühe und Kultur": "Kaiser, Kühe und Kultur (en)",
+  "Ein Parcours durch die Arenenberger Vielfalt": "Ein Parcours durch die Arenenberger Vielfalt (en)"
 }
