--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -3,5 +3,7 @@
   "Impressum": "Impressum",
   "Einstellungen": "Paramètres",
   "Über uns": "À propos de nous",
-  "Start": "Start (fr)"
+  "Start": "Start (fr)",
+  "Kaiser, Kühe und Kultur": "Kaiser, Kühe und Kultur (fr)",
+  "Ein Parcours durch die Arenenberger Vielfalt": "Un parcours à travers la diversité de l'Arenenberg"
 }
