--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -4,6 +4,7 @@
   "Einstellungen": "Settings",
   "Über uns": "About us",
   "Start": "Start",
+  "Digitaler Kuhstall": "Digitaler Kuhstall (en)",
   "Kaiser, Kühe und Kultur": "Kaiser, Kühe und Kultur (en)",
   "Ein Parcours durch die Arenenberger Vielfalt": "Ein Parcours durch die Arenenberger Vielfalt (en)"
 }
