--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -4,6 +4,7 @@
   "Einstellungen": "Paramètres",
   "Über uns": "À propos de nous",
   "Start": "Start (fr)",
+  "Digitaler Kuhstall": "Digitaler Kuhstall (fr)",
   "Kaiser, Kühe und Kultur": "Kaiser, Kühe und Kultur (fr)",
   "Ein Parcours durch die Arenenberger Vielfalt": "Un parcours à travers la diversité de l'Arenenberg"
 }
