--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -4,7 +4,9 @@
   "Einstellungen": "Settings",
   "Über uns": "About us",
   "Start": "Start",
-  "Digitaler Kuhstall": "Digitaler Kuhstall (en)",
-  "Kaiser, Kühe und Kultur": "Kaiser, Kühe und Kultur (en)",
-  "Ein Parcours durch die Arenenberger Vielfalt": "Ein Parcours durch die Arenenberger Vielfalt (en)"
+  "Milch mit Zukunft": "Milk with a future",
+  "Kaiser, Kühe und Kultur": "Crowns, cows and culture",
+  "Ein Parcours durch die Arenenberger Vielfalt": "A journey through the diversity of Arenenberg",
+  "Schlüssel": "Key",
+  "Ungültige Eingabe!": "Invalid input!"
 }
