--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -3,8 +3,10 @@
   "Impressum": "Impressum",
   "Einstellungen": "Paramètres",
   "Über uns": "À propos de nous",
-  "Start": "Start (fr)",
-  "Digitaler Kuhstall": "Digitaler Kuhstall (fr)",
-  "Kaiser, Kühe und Kultur": "Kaiser, Kühe und Kultur (fr)",
-  "Ein Parcours durch die Arenenberger Vielfalt": "Un parcours à travers la diversité de l'Arenenberg"
+  "Start": "Démarrer",
+  "Milch mit Zukunft": "Un lait qui a de l'avenir",
+  "Kaiser, Kühe und Kultur": "Empereur, vaches et culture",
+  "Ein Parcours durch die Arenenberger Vielfalt": "Un parcours à travers la diversité du domaine d’Arenenberg",
+  "Schlüssel": "Clé",
+  "Ungültige Eingabe!": "Entrée invalide !"
 }
