--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -8,5 +8,6 @@
   "Kaiser, Kühe und Kultur": "Crowns, cows and culture",
   "Ein Parcours durch die Arenenberger Vielfalt": "A journey through the diversity of Arenenberg",
   "Schlüssel": "Key",
-  "Ungültige Eingabe!": "Invalid input!"
+  "Ungültige Eingabe!": "Invalid input!",
+  "Persona": "Character"
 }
