--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -4,9 +4,10 @@
   "Einstellungen": "Paramètres",
   "Über uns": "À propos de nous",
   "Start": "Démarrer",
-  "Milch mit Zukunft": "Un lait qui a de l'avenir",
+  "Milch mit Zukunft": "Un lait qui a de l’avenir",
   "Kaiser, Kühe und Kultur": "Empereur, vaches et culture",
   "Ein Parcours durch die Arenenberger Vielfalt": "Un parcours à travers la diversité du domaine d’Arenenberg",
   "Schlüssel": "Clé",
-  "Ungültige Eingabe!": "Entrée invalide !"
+  "Ungültige Eingabe!": "Entrée invalide !",
+  "Persona": "Personage"
 }
