--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -8,6 +8,51 @@
   "Kaiser, Kühe und Kultur": "Crowns, cows and culture",
   "Ein Parcours durch die Arenenberger Vielfalt": "A journey through the diversity of Arenenberg",
   "Schlüssel": "Key",
-  "Ungültige Eingabe!": "Invalid input!",
-  "Persona": "Character"
+  "Ungültige Eingabe!": "Invalid entry!",
+  "Persona": "Character",
+  "Willkommen im Arenenberger Milchviehstall!": "Welcome to the Arenenberg dairy barn!",
+  "Du begleitest die Kuh Frida durch einen typischen Apriltag und entdeckst die Arbeiten im Arenenberger Milchviehstall. Wähle eine Persona aus und klicke auf dem Zeitstrahl die Uhrzeit an, die Dich interessiert! So erfährst Du Wissenswertes über die Aufgaben der Mitarbeitenden im Stall sowie über die Tiere am Arenenberg. Gleichzeitig kannst Du in einem Quiz Dein Wissen testen. Viel Spass!": "Accompany Frida the Cow on a typical April day and learn about the work done in the Arenenberg dairy barn. Choose a character and click the time of day that interests you on the time line! You’ll learn useful information about the staff’s duties in the barn and about the animals at Arenenberg. Then, you can take a quiz to test your knowledge! Have fun!",
+  "Tageszeit": "Time of day",
+  "Deine Antwort war korrekt.": "Your answer was correct.",
+  "Falsch! Richtig ist Antwort": "Wrong! The correct is answer",
+  "Nächste Frage": "Next question",
+  "Fragen": "Questions",
+  "Danke fürs Mitmachen! Du kennst dich jetzt richtig gut im Arenenberger Milchviehstall aus.": "Thank you for taking the quiz! You know your way around the Arenenberg dairy barn really well now.",
+  "Nochmal spielen": "Play again",
+  "Bäuerin": "Farmer",
+  "Folgen Sie einem typischen Apriltag einer Kuh im Arenenberger Milchviehstall! Die Kuh Frida ist fünf Jahre alt. Sie hat zweimal gekalbert. Pro Tag liefert sie im Schnitt 25 Liter Milch.": "Follow a typical April day of a cow in the Arenenberg dairy cowshed! Frida is a five-year-old dairy cow. She has calved twice and provides an average of 25 litres of milk per day.",
+  "6.00": "6 a.m.",
+  "6 Uhr": "6 a.m.",
+  "Frida geht auf die Weide. Sie frisst junges, frisches Gras. Das ist sehr gehaltreiches Futter.": "Frida goes to the pasture. She eats fresh, green grass. This is very nutritious fodder.",
+  "Freier Tierverkehr": "Free movement of animals",
+  "Frida und die anderen Kühe am Arenenberg geniessen grosse Freiheiten. Sie entscheiden selbst, wann sie fressen und trinken, liegen oder sich melken lassen.": "Frida and the other cows at Arenenberg have a considerable amount of freedom. They decide for themselves when to eat and drink, when to lie down and when to be milked.",
+  "10.00": "10 a.m.",
+  "10 Uhr": "10 a.m.",
+  "Frida geht zurück zum Stall. Sie freut sich auf den Nachtisch, das Lockfutter, das beim Melkroboter auf sie wartet.": "Frida returns to her cowshed. She is looking forward to her next course, i.e. the bait pellets waiting for her by the milking robot.",
+  "Weidemanagement": "Pasture management",
+  "Die Kühe sollen möglichst viel junges Gras auf der Weide fressen, jedoch nicht den ganzen Tag. Mindestens zweimal täglich müssen sie gemolken werden. Die Weide ist so gross, dass die Kühe sie in einigen Stunden abweiden. Mit dem Wissen, dass sie am Nachmittag wieder auf eine neue, frische Weide zugelassen werden, gehen sie vor dem Mittag zurück in den Stall und lassen sich melken.": "The cows should eat as much fresh grass as possible on the pasture, but not all day long. They need to be milked at least twice per day. The cows can graze down a pasture of this size within a few hours. They return to the cowshed before noon for milking in the knowledge that they will be allowed back onto a fresh, new pasture in the afternoon.",
+  "11.00": "11 a.m.",
+  "11 Uhr": "11 a.m.",
+  "Frida steht im Melkroboter. Sie frisst leckeres Futter und wird gemolken. Der Melkroboter führt die Melkarbeit stets gleich und geduldig aus. Das ist angenehm für Frida.": "Frida is standing by the milking robot. She eats delicious fodder and is being milked. The milking robot always milks the cows in the same, patient way. Frida finds it a pleasant experience.",
+  "Automatisches Melksystem": "Automatic milking system",
+  "Die Kühe werden mit Futter in den Melkroboter gelockt. Die Melkarbeit übernimmt das automatische Melksystem. Es melkt ohne Stress und nicht zu lange. Die Kühe sollen mindestens zweimal pro Tag gemolken werden.": "The cows are enticed into the milking robot with fodder. They are milked by an automatic milking system. It's stress-free and does not take very long. The cows need to be milked at least twice per day.",
+  "12.00": "12 p.m.",
+  "12 Uhr": "12 noon",
+  "Besonders nach dem Melken, aber auch immer wieder zwischendurch, trinkt Frida am Tränketrog frisches Wasser, pro Tag durchschnittlich circa 120 Liter. Nach dem frischen und jungen Gras hat Frida Lust auf etwas Trockenes und Ballastreiches. Sie frisst am Futtertisch Heu. Heu ist ein ideales Ausgleichsfutter zu jungem Gras und stabilisiert die Verdauung von Frida.": "Frida drinks fresh water from the trough, especially after milking but also in between, averaging about 120 litres per day. After eating the fresh, green grass, Frida would like something dry and high in fibre. She eats hay at the feed alley. Hay is an ideal complement to young grass, and stabilises Frida's digestion.",
+  "Daten": "Data",
+  "Der Melkroboter und ein Sensor am Halsband der Kühe sammeln Daten zur Milch und zur Kuh. Diese Daten beschreiben z. B. die Qualität der Milch oder die Aktivität der Kühe. Sie liefern zudem Hinweise auf ihre Gesundheit.": "The milking robot and a sensor on the cow’s collar collect information about the milk and the cow, for example, about the quality of the milk or the cows' activity. It also provides information about the cow's health.",
+  "13.00": "1 p.m.",
+  "13 Uhr": "1 p.m.",
+  "Frida will sich ausruhen und legt sich ins frisch eingestreute Sägemehl. Zuvor macht sie Körperhygiene und lässt sich von der automatischen Kuhputzbürste den Staub aus dem Fell bürsten.": "Frida wants to rest and lies down in the freshly sprinkled sawdust. Beforehand, she carries out her personal hygiene routine and lets the automatic livestock brush remove the dust from her hide.",
+  "Kompostierungsstall": "Composting barn",
+  "Der Kompostierungsstall bietet den Kühen viel Liegekomfort und grosse Bewegungsfreiheit. Die Liegefläche wird mit frischem Einstreumaterial wie Sägemehl eingefüllt. Aus dem Einstreumaterial, dem Kot und dem Harn der Kühe entsteht ein wertvoller Kompost, der als Dünger auf die Felder verteilt wird.": "The composting barn provides the cows with plenty of comfortable material to lie on and plenty of freedom to move about. The floor is covered with fresh bedding material such as sawdust. The bedding material, dung and urine of the cows produce a rich compost, which is then spread on the fields as fertiliser.",
+  "17.00": "5 p.m.",
+  "17 Uhr": "5 p.m.",
+  "Es ist Zeit, nochmals auf die Weide zu gehen. Frida begibt sich zum Weidetor und erhält Zugang zu einer neuen, frischen Weide mit saftigem Gras.": "It’s time to go grazing again. Frida goes to the pasture gate and is allowed onto a new, fresh pasture with lush grass.",
+  "Weidetor": "Pasture gate",
+  "Die Kühe werden über das Weidetor gesteuert. Das Weidetor gibt ihnen den Zugang zur Weide nur frei, wenn ihre letzte Melkung weniger als sieben Stunden zurückliegt. Ansonsten werden sie zurück in den Stall geleitet, um zuerst den Melkroboter aufzusuchen.": "The cows are controlled via the pasture gate. The pasture gate only lets them onto the pasture if they were last milked less than seven hours ago. Otherwise, they are led back to the cowshed for milking before they are released.",
+  "20.00": "8 p.m.",
+  "20 Uhr": "8 p.m.",
+  "Satt gefressen begibt sich Frida zurück in den Stall und lässt sich nochmals melken. Danach entscheidet sie selbst, ob sie die Nacht im Stall oder im Freien auf der Weide verbringt.": "Her hunger stilled, Frida returns to the cowshed and is milked again. She then chooses whether to spend the night in the cowshed or outdoors on the pasture.",
+  "22.00": "10 p.m."
 }
