--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -3,11 +3,57 @@
   "Impressum": "Impressum",
   "Einstellungen": "Paramètres",
   "Über uns": "À propos de nous",
-  "Start": "Démarrer",
+  "Start": "Début",
   "Milch mit Zukunft": "Un lait qui a de l’avenir",
   "Kaiser, Kühe und Kultur": "Empereur, vaches et culture",
   "Ein Parcours durch die Arenenberger Vielfalt": "Un parcours à travers la diversité du domaine d’Arenenberg",
   "Schlüssel": "Clé",
-  "Ungültige Eingabe!": "Entrée invalide !",
-  "Persona": "Personage"
+  "Ungültige Eingabe!": "Entrée non valide !",
+  "Persona": "Personage",
+  "Willkommen im Arenenberger Milchviehstall!": "Bienvenue dans l’étable laitière d’Arenenberg !",
+  "Du begleitest die Kuh Frida durch einen typischen Apriltag und entdeckst die Arbeiten im Arenenberger Milchviehstall. Wähle eine Persona aus und klicke auf dem Zeitstrahl die Uhrzeit an, die Dich interessiert! So erfährst Du Wissenswertes über die Aufgaben der Mitarbeitenden im Stall sowie über die Tiere am Arenenberg. Gleichzeitig kannst Du in einem Quiz Dein Wissen testen. Viel Spass!": "Tu accompagnes la vache Frida pendant une journée d'avril typique et tu découvres les travaux dans l’étable laitière d’Arenenberg. Choisis un personnage et clique sur l’heure qui t’intéresse dans la ligne temporelle ! Tu apprendras ainsi des choses intéressantes sur les tâches des personnes travaillant dans l’étable et sur les animaux d’Arenenberg. Tu peux aussi tester tes connaissances avec un quiz. Amuse-toi bien !",
+  "Tageszeit": "Moment de la journée",
+  "Deine Antwort war korrekt.": "Votre réponse est correcte.",
+  "Falsch! Richtig ist Antwort": "Faux ! La bonne réponse est",
+  "Nächste Frage": "Question suivante",
+  "Fragen": "Questions",
+  "Danke fürs Mitmachen! Du kennst dich jetzt richtig gut im Arenenberger Milchviehstall aus.": "Merci d’avoir participé ! Tu connais maintenant très bien l’étable pour vaches laitières d’Arenenberg.",
+  "Nochmal spielen": "Jouer encore une fois",
+  "Bäuerin": "Éleveur",
+  "Frida": "Frida",
+  "Folgen Sie einem typischen Apriltag einer Kuh im Arenenberger Milchviehstall! Die Kuh Frida ist fünf Jahre alt. Sie hat zweimal gekalbert. Pro Tag liefert sie im Schnitt 25 Liter Milch.": "Suivez une journée d’avril typique d’une vache dans l’étable laitière d’Arenenberg ! La vache Frida a cinq ans. Elle a vêlé deux fois. Elle fournit en moyenne 25 litres de lait par jour.",
+  "6.00": "6 h 00",
+  "6 Uhr": "6 h 00",
+  "Frida geht auf die Weide. Sie frisst junges, frisches Gras. Das ist sehr gehaltreiches Futter.": "Frida part au pâturage. Elle mange de l’herbe tendre et fraîche. C’est un fourrage très riche.",
+  "Freier Tierverkehr": "Libre circulation des animaux",
+  "Frida und die anderen Kühe am Arenenberg geniessen grosse Freiheiten. Sie entscheiden selbst, wann sie fressen und trinken, liegen oder sich melken lassen.": "Frida et les autres vaches d’Arenenberg jouissent d’une grande liberté. Elles décident elles-mêmes quand elles veulent manger et boire, se coucher ou se faire traire.",
+  "10.00": "10 h 00",
+  "10 Uhr": "10 h 00",
+  "Frida geht zurück zum Stall. Sie freut sich auf den Nachtisch, das Lockfutter, das beim Melkroboter auf sie wartet.": "Frida retourne à l’étable. Elle est impatiente de déguster son dessert, le délicieux fourrage qui va l’attirer près du robot de traite.",
+  "Weidemanagement": "Gestion des pâturages",
+  "Die Kühe sollen möglichst viel junges Gras auf der Weide fressen, jedoch nicht den ganzen Tag. Mindestens zweimal täglich müssen sie gemolken werden. Die Weide ist so gross, dass die Kühe sie in einigen Stunden abweiden. Mit dem Wissen, dass sie am Nachmittag wieder auf eine neue, frische Weide zugelassen werden, gehen sie vor dem Mittag zurück in den Stall und lassen sich melken.": "Les vaches doivent manger autant d’herbe tendre que possible dans les pâturages, mais pas toute la journée. Elles doivent être traites au moins deux fois par jour. Le pâturage est suffisamment grand pour que les vaches le broutent en quelques heures. Sachant qu’elles iront dans un nouveau pâturage frais l’après-midi, elles retournent à l’étable avant midi pour se faire traire.",
+  "11.00": "11 h 00",
+  "11 Uhr": "11 h 00",
+  "Frida steht im Melkroboter. Sie frisst leckeres Futter und wird gemolken. Der Melkroboter führt die Melkarbeit stets gleich und geduldig aus. Das ist angenehm für Frida.": "Frida se trouve dans le robot de traite. Elle mange un délicieux fourrage et se fait traire. Le robot de traite effectue toujours la traite de la même manière et avec délicatesse. Ce moment est agréable pour Frida.",
+  "Automatisches Melksystem": "Système de traite automatique",
+  "Die Kühe werden mit Futter in den Melkroboter gelockt. Die Melkarbeit übernimmt das automatische Melksystem. Es melkt ohne Stress und nicht zu lange. Die Kühe sollen mindestens zweimal pro Tag gemolken werden.": "Les vaches sont attirées dans le robot de traite avec du fourrage. Le système de traite automatique se charge de la traite. Il trait sans stress et cela ne dure pas trop longtemps. Les vaches doivent être traites au moins deux fois par jour.",
+  "12.00": "12 h 00",
+  "12 Uhr": "12 h 00",
+  "Besonders nach dem Melken, aber auch immer wieder zwischendurch, trinkt Frida am Tränketrog frisches Wasser, pro Tag durchschnittlich circa 120 Liter. Nach dem frischen und jungen Gras hat Frida Lust auf etwas Trockenes und Ballastreiches. Sie frisst am Futtertisch Heu. Heu ist ein ideales Ausgleichsfutter zu jungem Gras und stabilisiert die Verdauung von Frida.": "Frida boit de l’eau fraîche à l’abreuvoir, environ 120 litres par jour en moyenne, principalement après la traite, mais aussi quand l’envie lui prend. Après l’herbe tendre et fraîche, Frida a envie de quelque chose de sec et de riche en fibres. Elle mange du foin dans la mangeoire. Le foin est un aliment qui équilibre parfaitement l’herbe tendre et stabilise la digestion de Frida.",
+  "Daten": "Données",
+  "Der Melkroboter und ein Sensor am Halsband der Kühe sammeln Daten zur Milch und zur Kuh. Diese Daten beschreiben z. B. die Qualität der Milch oder die Aktivität der Kühe. Sie liefern zudem Hinweise auf ihre Gesundheit.": "Le robot de traite et un capteur placé sur le collier des vaches collectent des données sur le lait et la vache. Ces données décrivent par exemple la qualité du lait ou l’activité des vaches. Elles fournissent également des informations sur leur santé.",
+  "13.00": "13 h 00",
+  "13 Uhr": "13 h 00",
+  "Frida will sich ausruhen und legt sich ins frisch eingestreute Sägemehl. Zuvor macht sie Körperhygiene und lässt sich von der automatischen Kuhputzbürste den Staub aus dem Fell bürsten.": "Frida veut se reposer et s’allonge dans la sciure fraîchement répandue. Auparavant, elle fait sa toilette et retire la poussière de son pelage à l’aide de la brosse automatique.",
+  "Kompostierungsstall": "Étable à compost",
+  "Der Kompostierungsstall bietet den Kühen viel Liegekomfort und grosse Bewegungsfreiheit. Die Liegefläche wird mit frischem Einstreumaterial wie Sägemehl eingefüllt. Aus dem Einstreumaterial, dem Kot und dem Harn der Kühe entsteht ein wertvoller Kompost, der als Dünger auf die Felder verteilt wird.": "L’étable à compost offre aux vaches un grand confort de couchage et une grande liberté de mouvement. La surface de repos est remplie de litière fraîche, par exemple de la sciure. Les litières, les excréments et l’urine des vaches forment un précieux compost qui est répandu dans les champs sous forme d’engrais.",
+  "17.00": "17 h 00",
+  "17 Uhr": "17 h 00",
+  "Es ist Zeit, nochmals auf die Weide zu gehen. Frida begibt sich zum Weidetor und erhält Zugang zu einer neuen, frischen Weide mit saftigem Gras.": "Il est temps de retourner au pâturage. Frida se dirige vers la porte du pâturage et accède à une nouvelle prairie fraîche faite d’herbe luxuriante.",
+  "Weidetor": "Portail du pâturage",
+  "Die Kühe werden über das Weidetor gesteuert. Das Weidetor gibt ihnen den Zugang zur Weide nur frei, wenn ihre letzte Melkung weniger als sieben Stunden zurückliegt. Ansonsten werden sie zurück in den Stall geleitet, um zuerst den Melkroboter aufzusuchen.": "Les vaches sont guidées par le portail du pâturage, qui ne leur permet d’accéder à ce dernier que si leur dernière traite remonte à moins de sept heures. Sinon, elles doivent retourner à l’étable et se rendre au robot de traite.",
+  "20.00": "20 h 00",
+  "20 Uhr": "20 h 00",
+  "Satt gefressen begibt sich Frida zurück in den Stall und lässt sich nochmals melken. Danach entscheidet sie selbst, ob sie die Nacht im Stall oder im Freien auf der Weide verbringt.": "Rassasiée, Frida retourne à l’étable et se fait traire à nouveau. Elle décide ensuite elle-même si elle passe la nuit dans l’étable ou en plein air dans les pâturages.",
+  "22.00": "22 h 00"
 }
